[package]
name = "mpl-utils"
version = "0.2.0"
edition = "2021"
description = "MPL Core Utils library"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
solana-program = { path= "../../../../pl-solana/sdk/program", version = "=1.10.41" }
borsh = "0.9.3"
arrayref = "0.3.6"
spl-token = { path= "../../../../pl-solana-program-library/token/program", version = "=3.5.0", features = ["no-entrypoint"] }

[features]
token = ["spl-token"]
default = ["token"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
